--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,6 +25,6 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Deploy to GitHub Pages"
-          git push https://$ACTIONS_DEPLOY_TOKEN@https://prathikanand7.github.io/Snaptrude-Assignment/ HEAD:gh-pages  # Ensure you push to `gh-pages`
+          git push https://$ACTIONS_DEPLOY_TOKEN@prathikanand7.github.io/Snaptrude-Assignment/ HEAD:gh-pages  # Ensure you push to `gh-pages`
         env:
           ACTIONS_DEPLOY_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
