--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,30 +1,58 @@
-name: Deploy to GitHub Pages from a Specific Branch
+name: Deploy to GitHub Pages
 
+# This workflow runs whenever you push code to the 'main' branch
 on:
   push:
     branches:
-      - main  # Change this to your main branch or the branch you want to trigger from
+      - main  # or your default branch
 
+# Defines the job to be run
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    # Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm install
+    # Set up Node.js for the environment
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'  # You can set this to '20' if your project supports Node.js 20
 
-      - name: Build project
-        run: npm run build
+    # Install dependencies using npm
+    - name: Install dependencies
+      run: npm install
 
-      - name: Deploy to GitHub Pages
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add .
-          git commit -m "Deploy to GitHub Pages"
-          git push https://$ACTIONS_DEPLOY_TOKEN@github.com/prathikanand7/Snaptrude-Assignment.git HEAD:gh-pages  # Ensure you push to `gh-pages`
-        env:
-          ACTIONS_DEPLOY_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+    # Build the project (if using a build tool like Parcel)
+    - name: Build the project
+      run: npm run build  # Replace this with your build command (e.g., npm run build)
+
+    # Deploy to GitHub Pages branch (gh-pages)
+    - name: Deploy to GitHub Pages
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git add .
+        git commit -m "Deploy to GitHub Pages"
+        git push https://$ACTIONS_DEPLOY_TOKEN@github.com/prathikanand7/Snaptrude-Assignment.git HEAD:gh-pages
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}  # The default GitHub token used for authentication
+
+    # Optional: Push built files to the 'gh-pages' branch for deployment
+    - name: Push to GitHub Pages branch
+      run: |
+        git checkout --orphan gh-pages
+        git reset --hard
+        git add dist/  # If you are using a build tool like Parcel, push the 'dist' folder
+        git commit -m "Deploy static site"
+        git push --force https://$ACTIONS_DEPLOY_TOKEN@github.com/prathikanand7/Snaptrude-Assignment.git gh-pages
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+
+    # Optional: Clean up
+    - name: Clean up old build artifacts
+      run: npm run clean  # If you have a clean script defined
+
